[gd_scene load_steps=5 format=3 uid="uid://dcvg1i7ut5foi"]

[ext_resource type="Script" path="res://game/fx/enemy_slice_death_effect.gd" id="1_0tkgc"]

[sub_resource type="Animation" id="Animation_x87ct"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c1jj5"]
resource_name = "fade_out"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmqku"]
_data = {
"RESET": SubResource("Animation_x87ct"),
"fade_out": SubResource("Animation_c1jj5")
}

[node name="EnemySliceDeathEffect" type="Node2D"]
script = ExtResource("1_0tkgc")

[node name="Half1" type="RigidBody2D" parent="."]
collision_layer = 0

[node name="Top" type="Sprite2D" parent="Half1"]
visible = false

[node name="Left" type="Sprite2D" parent="Half1"]
visible = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Half1"]

[node name="Half2" type="RigidBody2D" parent="."]
collision_layer = 0

[node name="Bottom" type="Sprite2D" parent="Half2"]
visible = false

[node name="Right" type="Sprite2D" parent="Half2"]
visible = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Half2"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xmqku")
}
autoplay = "fade_out"
